objects/Product_Line__c.object
<CustomObject>
    <fields>
        <fullName>Altcode__c</fullName>
        <description>Pending for discussion</description>
        <label>Altcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayDescription__c</fullName>
        <description>Feed Outbound.</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <description>Pending for discussion</description>
        <formula>&apos;0&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documents__c</fullName>
        <label>Documents</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Operating_Company__c</fullName>
        <label>Operating Company</label>
        <picklist>
            <picklistValues>
                <fullName>JMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PMUSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NUMRK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USST</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TenantId__c</fullName>
        <description>Feed Outbound - ALORICAALTRIA</description>
        <formula>&apos;ALORICAALTRIA&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TenantId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trace_Code_Location__c</fullName>
        <label>Trace Code Location</label>
        <picklist>
            <picklistValues>
                <fullName>PAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isValidDateCode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isValidDateCode</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Line</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Operating_Company__c</columns>
        <columns>Trace_Code_Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>